tests/parser/property_arguments/test_1.m.octave.out
In test_1.m, line 14
|     arguments
|     ^^^^^^^^^ style: end statement with a semicolon [end_of_statements]
In test_1.m, line 15
|         x (:,:) double
|                 ^^^^^^ error: expected end of statement, found IDENTIFIER instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 style issue(s), 1 error(s)
